fixed audio issues and the notification thing not showing up
everything should be fixed finally.. if you still have any audio issues just mute / unmute again to fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -76,7 +76,7 @@ body {
 
 #notification{
 	position: absolute;
-	top: 110%;
+	top: 7%;
 	left: 50%;
 	height:10%;
 	z-index: 2;
